Thu Jun 21 08:40:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

      commit f169a288e51231ca120d066e143742d1432a8443
      Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
      Date:   Thu Jun 21 10:31:36 2012 +0200

              * CIAO/tests/TTSCTest/TTSConnector/TTSConnector_conn.cpp:
              * CIAO/tests/TTSCTest/TTSConnector/TTSConnector_conn.h:
              * CIAO/tests/TTSConnContext/TTSCConnector/TTSCConnector_conn.cpp:
              * CIAO/tests/TTSConnContext/TTSCConnector/TTSCConnector_conn.h:
              used reference-counting policy for pulse_Generator to solve memory leaks

Wed Jun 20 08:13:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merged service_connector branch. This adds support for so called
        service components which are available through the component context
        using resolve_service_reference. Service components are deployed as
        regular components, but are installed by the installation handler (see
        the TTSCTest test) or they install themselves into the service registry
        (see TTSConnContext). These components can be seen as container plugins
        which are going to be used for various extensions without causing the
        container to be huge and unmaintainable

        commit a5d5158d22435059f4488e1ff96ed1862fba8ab7
        Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
        Date:   Tue Jun 19 10:20:23 2012 +0200

                * CIAO/tests/TTSConnContext/README.txt:
                  Explain test

        commit 859f54123a96f8474cbd7f4be8e10a8cb5e4b776
        Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
        Date:   Mon Jun 18 17:34:33 2012 +0200

                * CIAO/bin/ciao_tests.lst:
                * CIAO/ccm/CCM_Context.idl:
                * CIAO/ciao/Contexts/Context_Impl_Base_T.cpp:
                * CIAO/ciao/Contexts/Context_Impl_Base_T.h:
                Made (un)install_service_component_reference available on context.
